Style: Update site title

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Linay & Aryan's Comics
+title: Linay Aryan's Comics
 description: A collection of comics by Linay and Aryan.
 theme: minima
 collections:
