docs: Update configuration

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Linay Aryan's Comics
-description: A collection of comics by Linay and Aryan.
+description: A collection of comics by Linay Aryan.
 theme: minima
 collections:
   comics:
