Fix: Revert to custom comic theme to restore functionality

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Linay Aryan's Comics
 description: A collection of comics by Linay Aryan.
-theme: hacker
+theme: minima
 collections:
   comics:
     output: true
